# stepss-cg-studio

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  run.bat  run.sh
.claude/memory/: MEMORY.md  reference_codegen_docs.md
.claude/projects/-home-apetros-OneDriveCUT-Code-stepss-cg-studio/memory/: reference_codegen_upstream.md
.github/workflows/: ci.yml
docs/: DESIGN.md
docs/specs/: 2026-04-05-pypi-packaging-design.md  2026-04-05-pypi-packaging-plan.md
examples/: ENTSOE_simp.json  ENTSOE_simp_exc.txt  HVDC_LCC.json  exc_AC1A.txt  inj_vfd_load.txt  tor_TGOV1D.txt  twop_HVDC_LCC.txt
frontend/: blocks.json  index.html
frontend/css/: style.css
frontend/js/: api.js  canvas.js  dsl_preview.js  forms.js  main.js  sidebar.js  store.js
server/: app.py  config.json  dsl_emitter.py  dsl_parser.py
src/cg_studio/: __init__.py  __main__.py  app.py  cli.py  config.py  dsl_emitter.py  dsl_parser.py
src/cg_studio/frontend/: blocks.json  index.html
src/cg_studio/frontend/css/: style.css
src/cg_studio/frontend/js/: api.js  canvas.js  check_model.js  dsl_preview.js  forms.js  main.js  palette.js  project_adapter.js  resizers.js  validate.js
tests/: conftest.py  test_api.py  test_check_model.py  test_cli.py  test_config.py  test_e2e.py  test_parser.py  test_project_adapter.py  test_validate.py
