[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stepss-cg-studio"
dynamic = ["version"]
description = "Visual block diagram editor for STEPSS CODEGEN power system models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Petros Aristidou", email = "apetros@pm.me"},
]
keywords = ["CODEGEN", "Power Systems", "STEPSS", "RAMSES", "Block Diagram"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.27.0",
    "playwright>=1.40",
]

[project.urls]
Homepage = "https://stepss.sps-lab.org/"
Documentation = "https://stepss.sps-lab.org/developer/cg-studio/"
Repository = "https://github.com/SPS-L/stepss-cg-studio"
Issues = "https://github.com/SPS-L/stepss-cg-studio/issues"

[project.scripts]
cg-studio = "cg_studio.cli:main"

[tool.setuptools.dynamic]
version = {attr = "cg_studio.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cg_studio = ["frontend/**/*", "bin/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
